# archway-templates

./: README.md
.github/scripts/: test_generate.sh
.github/workflows/: check.yml
base-workspace/: Cargo.toml
cw20/base/: .gitignore  Cargo.toml  Developing.md  NOTICE
cw20/base-lib/: Cargo.toml
cw20/base-lib/.cargo/: config
cw20/base-lib/examples/: schema.rs
cw20/base-lib/src/: lib.rs
cw20/base/.github/workflows/: Basic.yml
cw20/base/examples/: schema.rs
cw20/base/src/: contract.rs  lib.rs
cw20/escrow/: Cargo.toml  clippy.toml
cw20/escrow/examples/: schema.rs
cw20/escrow/src/: contract.rs  integration_test.rs  msg.rs  state.rs
cw721/off-chain-metadata/: Cargo.toml
cw721/off-chain-metadata/examples/: schema.rs
cw721/off-chain-metadata/src/: execute.rs
cw721/on-chain-metadata/: Cargo.toml  Developing.md  README.md  clippy.toml
cw721/on-chain-metadata/examples/: schema.rs
cw721/on-chain-metadata/src/: lib.rs
default/: Cargo.toml
default/examples/: schema.rs
default/src/: contract.rs  interface.rs  lib.rs  msg.rs
increment/: Cargo.toml  Developing.md  README.md  cargo-generate.toml
increment/src/: contract.rs  helpers.rs  lib.rs  msg.rs  state.rs
